Fix a severe bug when undo actions could become incomplete

Most of our undo actions are executed in strokes. It turned out that
these strokes can easily be cancelled (like normal strokes are), leaving
the image in inconsistent state. To achieve that the user should have
been pressed Ctrl+Z too quickly (or switch undo state in the docker
too quickly).

The problem could manifest itself in several ways:

1) "Quick Group" action could be partially undone, leaving the group
   layer in the stack.

2) Which could cause several more severe outcomes, because on the next
   undo/redo the layer would be added into the stack once again, causing
   the following:

   * KisNode::add() would assert that the node is already in the stack

   * KisDummiesFacadeBase::slotContinueAddRemoveNode() would assert/crash
     on inconsistency between dummies and nodes (bug 454121)

3) Tile manager could catch this broken undo history by an assert in
   KisMementoManager::rollback()

   ```
   KIS_SAFE_ASSERT_RECOVER_NOOP(changeList.memento == memento);
   ```

BUG:454121